--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+# requirements.txt - Updated versions
 Flask==3.0.0
 flask-cors==4.0.0
-yt-dlp==2023.12.30
+yt-dlp==2024.1.1
 Werkzeug==3.0.1
 gunicorn==21.2.0
+requests==2.31.0
+urllib3==2.1.0
+certifi==2023.11.17
